--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@jest/globals": "^30.2.0",
     "@mridang/eslint-defaults": "^1.5.0",
     "@playwright/test": "^1.57.0",
+    "@resvg/resvg-js": "^2.6.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
