--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@tsconfig/node22": "^22.0.5",
     "@types/chrome": "^0.0.280",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.19.3",
+    "chrome-webstore-upload-cli": "^3.5.0",
     "eslint": "^9.17.0",
     "jest": "^29.7.0",
     "knip": "^5.73.4",
