--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/node": "^22.19.3",
     "eslint": "^9.17.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "knip": "^5.73.4",
     "prettier": "^3.3.3",
     "rollup": "^4.28.1",
